--- a/notes.ipynb
+++ b/notes.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -59,12 +59,14 @@
        "11"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import re\n",
+    "\n",
     "a = 'Hello World'\n",
     "len(a)"
    ]
@@ -129,6 +131,87 @@
     "for i in a:\n",
     "    print(\"is just as \", format(i))\n",
     "len(a)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Besides your name, you also have to add your age to it\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split divides 1 string into 2 mutable strings\n",
+    "name_desc = \"Besides your name, you also have to add your age to it. In that case everything we do, is safe and better. ANyway, how old are you at the moment?\"\n",
+    "items = []\n",
+    "items = name_desc.split(sep='.')\n",
+    "for item in items:\n",
+    "    if(str(item.lower()).startswith('B'.lower())):\n",
+    "        print(item)\n",
+    "    # else:\n",
+    "        # print(\"\")\n",
+    "print(len(items))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "21\n",
+      "  Ernest Sebastian                            \n"
+     ]
+    }
+   ],
+   "source": [
+    "#String strip\n",
+    "#Imagine you have a form that takes in users name and/password password.\n",
+    "# certainly you dont want a username with spaces at the end as it poses formatting issues whenever you want to use that say in 100 places in your app.\n",
+    "# stripping the blanks at the end or beginning of the string is a better solution to this.\n",
+    "# However using ReGex is also possible to achieve the same\n",
+    "'''\n",
+    "\n",
+    "REGEX EXAMPLE\n",
+    "string = re.sub(r'\\W+', ' ', input_string)\n",
+    "\n",
+    "''' \n",
+    "input_string = \"    Hello world      \"\n",
+    "print(len(input_string))\n",
+    "string = re.sub(r'\\W+', '', input_string)\n",
+    "print(len(input_string))\n",
+    "\n",
+    "names = \"  Ernest Sebastian                            \"\n",
+    "  \n",
+    "names.replace('  ', \"s\",2)\n",
+    "print( names)"
    ]
   },
   {
@@ -218,7 +301,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Another useful comman"
+   ]
   }
  ],
  "metadata": {
